--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "node-fetch": "^3.2.3",
     "react": "^18.0.0",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^18.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
